# gng

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  boot-1.0.0-1.gng  cspell.json  development-1.0.0-1.gng  documentation-1.0.0-1.gng  filesystem-1.0.0-1.gng  legal-1.0.0-1.gng  rust-toolchain.toml  setup-1.0.0-1.gng
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  build-bootstrap-env.yaml  build-gng-agent.yaml  build-nix-store.yaml  cd.yaml  cd.yml  ci.yaml  ci.yml  scorecards-analysis.yml
.reuse/: dep5
bootstrap/: .dockerignore  .gitignore  Dockerfile  Dockerfile.txt
commands/gng-build/: Cargo.toml
commands/gng-build-agent/: Cargo.toml
commands/gng-build-agent/lua/: inspect.lua  startup.lua
commands/gng-build-agent/src/: lib.rs  lua.rs  main.rs  script_support.rs
commands/gng-build-agent/src/lua/: engine.rs  mod_fs.rs
commands/gng-build/src/: agent_runner.rs  case_officer.rs  filter.rs  handler.rs  lib.rs  main.rs  packager.rs  runtime.rs
commands/gng-build/src/handler/: handler.rs  install_handler.rs  packaging_handler.rs  query_handler.rs  sources_handler.rs  verify_source_packet_handler.rs
commands/gng-build/src/packager/: classifying_directory_iterator.rs  deterministic_directory_iterator.rs  facet.rs  packet.rs  path.rs
commands/gng-repo/: Cargo.toml
commands/gng-repo/src/: lib.rs  main.rs
crates/gng_build_shared/: Cargo.toml
crates/gng_build_shared/src/: lib.rs  source_packet.rs
crates/gng_contained_command/: Cargo.toml
crates/gng_contained_command/src/: command.rs  lib.rs  runner.rs
crates/gng_core/: Cargo.toml
crates/gng_core/src/: lib.rs  log.rs  name.rs  version.rs
crates/gng_package/: Cargo.toml
crates/gng_package/src/: deterministic_directory_iterator.rs  filter.rs  lib.rs  packager.rs  packer.rs  path.rs  storage_function.rs
crates/gng_package/src/packager/: filtered.rs  storage.rs  switching.rs
crates/gng_packet_db/: Cargo.toml
crates/gng_packet_db/src/: directory_db.rs  lib.rs  repository.rs
crates/gng_packet_io/: Cargo.toml
crates/gng_packet_io/src/: lib.rs  packet_reader.rs  packet_writer.rs
crates/gng_packet_writer/: Cargo.toml
crates/gng_packet_writer/src/: lib.rs  packet_writer.rs  packet_writer_impl.rs
gng-build/: Cargo.toml
gng-build-agent/: Cargo.toml
gng-build-agent/lua/: startup.lua
gng-build-agent/src/: engine.rs  lib.rs  main.rs  source_package.rs  source_packet.rs
gng-build-agent/src/engine/: rhai_modules.rs
gng-build/src/: case_officer.rs  deterministic_directory_iterator.rs  handler.rs  lib.rs  main.rs  message_handler.rs  packager.rs  source_package.rs
gng-build/src/packager/: classifying_directory_iterator.rs  deterministic_directory_iterator.rs  facet.rs  mimetype_directory_iterator.rs  packet.rs
gng-db/: Cargo.toml
gng-db/src/: main.rs
gng-repo/: Cargo.toml
gng-repo/src/: main.rs
gng_build_shared/: Cargo.toml
gng_build_shared/src/: lib.rs  source_package.rs  source_packet.rs
gng_db/: Cargo.toml
gng_db/migrations/2021-06-20-123159_create_repositories/: down.sql  up.sql
gng_db/src/: backend.rs  config.rs  db.rs  gng_ext.rs  lib.rs  packet_db.rs  repository_db.rs
gng_db/src/backend/: db.rs  db_migrate_0.sql  schema.rs
gng_db/src/db/: backend.rs  definitions.rs  repository_db.rs  repository_packet_db.rs
gng_repository/: Cargo.toml
gng_repository/src/: lib.rs  repository.rs  repository_db.rs
gng_repository/src/repository/: backend.rs  definitions.rs
gng_repository/src/repository_db/: backend.rs  definitions.rs
gng_shared/: Cargo.toml
gng_shared/src/: config.rs  definitions.rs  gng.rs  hash.rs  lib.rs  log.rs  package.rs  packet.rs
