[package]
name = "gng-build"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
repository = "<PRIVATE_REPOSITORY>"

[dependencies]
gng_build_shared = { path = "../gng_build_shared" }
gng_shared = { path = "../gng_shared" }

eyre = { version = "0.6.3" }
lazy_static = { version = "1.4.0" }
rand = { version = "0.7.3" }
structopt = { version = "0.3.20" }
tempfile = { version = "3.1.0" }
tracing = { version = "0.1.21" }
tracing-subscriber = { version = "0.2.15" }
