[package]
name = "gng-repo"
version = "0.1.0"
edition = "2018"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
repository = "https://github.com/hunger/gng"

[dependencies]
clap = { version = "3.0.0-beta.2" }
eyre = { version = "0.6" }
gng_repository = { path = "../gng_repository" }
gng_shared = { path = "../gng_shared" }
tracing = { version = "0.1" }

[dev-dependencies]
temp-dir = { version = "0.1" }
