[package]
name = "gng_build_shared"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gng_shared = { path = "../gng_shared" }

lazy_static = { version = "1.4.0" }
serde = { version = "1.0.117" }