[package]
name = "gng_db"
version = "0.1.0"
edition = "2018"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
repository = "https://github.com/hunger/gng"

[dependencies]
gng_shared = { path = "../gng_shared" }
justconfig = { version = "1.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
uuid = { version = "0.8", features = ["serde", "v4"] }
