[package]
name = "gng_shared"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
repository = "<PRIVATE_REPOSITORY>"

[dependencies]
derive_builder = { version = "0.9.0" }
itertools = { version = "0.9.0" }
serde = { version = "1.0.117" }
nix = { version = "0.19.0" }
thiserror = { version = "1.0.22" }
toml = { version = "0.5.7" }
tracing = { version = "0.1.21" }

