[package]
name = "gng-build"
version = "0.1.0"
edition = "2018"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom" ]
repository = "https://github.com/hunger/gng"

[dependencies]
gng_build_shared = { path = "../../crates/gng_build_shared" }
gng_contained_command = { path = "../../crates/gng_contained_command" }
gng_core = { path = "../../crates/gng_core" }
gng_package = { path = "../../crates/gng_package" }

clap = { version = "3.0.0-beta.2" }
downloader = { version = "0.2", default-features = false, features = [ "tui", "verify", "rustls-tls" ] }
eyre = { version = "0.6" }
lazy_static = { version = "1.4" }
rand = { version = "0.8" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
spdx = { version = "0.6" }
tempfile = { version = "3.2" }
tracing = { version = "0.1" }
url = { version = "2.2" }

[dev-dependencies]
temp-dir = { version = "0.1" }
