# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2020 Tobias Hunger <tobias.hunger@gmail.com>

[package]
name = "gng-build"
version = "0.1.0"

authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
categories = ["tool", "packaging", "distribution", "linux", "cleanroom"]
edition = "2021"
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom"]
license = "GPL-3.0-or-later"
repository = "https://github.com/hunger/gng"
rust-version = "1.56"

[dependencies]
gng_build_shared = { path = "../../crates/gng_build_shared" }
gng_contained_command = { path = "../../crates/gng_contained_command" }
gng_core = { path = "../../crates/gng_core" }
gng_package = { path = "../../crates/gng_package" }
# gng_packet_db = { path = "../../crates/gng_packet_db" }

clap = { version = "4.0.9" }
# downloader = { version = "0.2", default-features = false, features = [ "tui", "verify", "rustls-tls" ] }
eyre = { version = "0.6" }
lazy_static = { version = "1.4" }
rand = { version = "0.8" }
regex = { version = "1.6" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
spdx = { version = "0.9" }
tempfile = { version = "3.3" }
tracing = { version = "0.1" }
url = { version = "2.3" }
