[package]
name = "gng-repo"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom"]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom"]
repository = "https://github.com/hunger/gng"

[dependencies]
gng_core = { path = "../../crates/gng_core" }
gng_packet_db = { path = "../../crates/gng_packet_db" }

clap = { version = "3.0.0-beta.2" }
eyre = { version = "0.6" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
