# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2020 Tobias Hunger <tobias.hunger@gmail.com>

[package]
name = "gng-repo"
version = "0.1.0"

authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
categories = ["tool", "packaging", "distribution", "linux", "cleanroom"]
edition = "2021"
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom"]
license = "GPL-3.0-or-later"
repository = "https://github.com/hunger/gng"
rust-version = "1.56"

[dependencies]
gng_core = { path = "../../crates/gng_core" }
gng_packet_db = { path = "../../crates/gng_packet_db" }

clap = { version = "3.1.12" }
eyre = { version = "0.6" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
