# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2020 Tobias Hunger <tobias.hunger@gmail.com>

[package]
name = "gng_build_shared"
version = "0.1.0"

authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
categories = ["tool", "packaging", "distribution", "linux", "cleanroom"]
edition = "2021"
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom"]
license = "GPL-3.0-or-later"
repository = "https://github.com/hunger/gng"
rust-version = "1.56"

[dependencies]
gng_core = { path = "../gng_core" }

lazy_static = { version = "1.4" }
serde = { version = "1.0" }
