[package]
name = "gng_core"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom"]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom"]
repository = "https://github.com/hunger/gng"

[dependencies]
clap = { version = "3.0.0-beta.2" }
faccess = { version = "0.2" }
itertools = { version = "0.10" }
nix = { version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
