[package]
name = "gng_package"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom"]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom"]
repository = "https://github.com/hunger/gng"

[dependencies]
gng_core = { path = "../gng_core" }
gng_packet_io = { path = "../gng_packet_io" }

eyre = { version = "0.6" }
filemagic = { version = "0.12" }
glob = { version = "0.3" }
lazy_static = { version = "1.4" }
nix = { version = "0.22" }
regex = { version = "1.5" }
tracing = { version = "0.1" }

[dev-dependencies]
tempfile = { version = "3.2" }
