[package]
name = "gng_packet_db"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gng_core = { path = "../gng_core" }
gng_packet_io = { path = "../gng_packet_io" }

eyre = { version = "0.6" }
glob = { version = "0.3" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
url = { version = "2.2" }
