[package]
name = "gng_packet_db"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
categories = ["tool", "packaging", "distribution", "linux", "cleanroom"]
keywords = ["tool", "packaging", "distribution", "linux", "cleanroom"]
repository = "https://github.com/hunger/gng"

[dependencies]
gng_core = { path = "../gng_core" }
gng_packet_io = { path = "../gng_packet_io" }

eyre = { version = "0.6" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
url = { version = "2.2" }
