[package]
name = "gng_packet_io"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2018"

[dependencies]
gng_core = { path = "../gng_core" }

eyre = { version = "0.6" }
nix = { version = "0.22" }
tar = { version = "0.4" }
tracing = { version = "0.1" }
zstd = { version = "0.9" }

[dev-dependencies]
tempfile = { version = "3.2" }
